# maxToki

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  assemble_ramachandran_h5ad.py  convert_ramachandran_to_h5ad.R  justfile  phase1_liver_screen.py  phase2_results.md  phase2_tf_rejuvenation.py  phase2b_results.md  phase2b_soft_oe.py  phase3_results.md  phase3_senescence_ko.py  phase3b_results.md  phase4_gsn_heart.py  phase4_results.md  phase4b_gsn_heart_ensemble.py  phase4b_results.md  phase4c_gsn_heart_1b.py  phase5_liver_fibrosis.py  phase5_results.md  pyproject.toml  run_phase3b.sh  run_phase4.sh  run_phase4b.sh  run_phase4c.sh  run_phase5.sh  tach.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
ci/scripts/: pytest_runner.sh  (+2 more)
resources/: gene_median_dictionary_v1.json  token_dictionary_v1.json
sub-packages/bionemo-maxtoki/: README.md  pyproject.toml
sub-packages/bionemo-maxtoki/src/bionemo/geneformer/biollama/: finetune_example.py
sub-packages/bionemo-maxtoki/src/bionemo/maxtoki/: api.py  datamodule.py  export_hf.py  generate_utils.py  hf_weights.py  import_hf.py  lightning.py  model.py  perturb.py  predict.py  sdpa_attention.py  tokenizer.py  train.py
sub-packages/bionemo-maxtoki/src/bionemo/maxtoki/data_prep/: __init__.py  __main__.py  cell_paragraph_assembler.py  dataset_utils.py  query_assembler.py  transcriptome_tokenizer.py
sub-packages/bionemo-maxtoki/tests/bionemo/maxtoki/: conftest.py  test_collate.py  test_conversion.py  test_data_prep.py  test_generate_utils.py  test_perturb.py  test_sdpa_attention.py  test_train.py
(+12 files in other folders)
